# hypy

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg
docs/: index.md  reference.md
explanation/: index.html
how-to-guides/: index.html
hypy/: Knapsack problem framework.ipynb  __init__.py  base.py  jitclass_compilation.py
hypy/problems/: __init__.py  knapsack.py
hypy/problems/vrp/: __init__.py  base_components.py  components.py  exceptions.py  problem_loaders.py  vrptw.py
hypy/problems/vrp/heuristics/: perturbative.py
hypy/problems/vrp/vrptw/: components.py
hypy/problems/vrp/vrptw/heuristics/: __init__.py  perturbative.py
reference/: index.html
site/: 404.html  index.html  objects.inv  sitemap.xml
site/assets/javascripts/: bundle.d6c3db9e.min.js
site/assets/stylesheets/: palette.815d1a91.min.css  palette.815d1a91.min.css.map
site/explanation/: index.html
site/how-to-guides/: index.html
site/reference/: index.html
site/tutorials/: index.html
tutorials/: index.html
