[tool.poetry]
name = "hypy"
version = "0.1.0"
description = ""
authors = ["enriquedlh97 <enriquedlh97@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
tqdm = "^4.64.1"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.982"
pytest = "^7.2.0"
toml = "^0.10.2"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
