[tool.poetry]
name = "hypy"
version = "0.1.0"
description = ""
authors = ["enriquedlh97 <enriquedlh97@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.4"
tqdm = "^4.64.1"
toml = "^0.10.2"
numba = "^0.56.4"
scipy = "^1.10.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.982"
pytest = "^7.2.0"
toml = "^0.10.2"
ipykernel = "^6.17.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-material = "^8.5.8"

[tool.black]
line-length = 79
exclude = "site/"

[tool.isort]
profile = "black"
line_length = 79

[tool.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
